--- a/frontend/components/styles/quote.css
+++ b/frontend/components/styles/quote.css
@@ -1,11 +1,9 @@
 
-.test { 
+.quote { 
     color: red;
     font-size: 20px;
     font-weight: bold;
     text-align: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
     padding: 10px;
     border: 1px solid black;
     border-radius: 10px;
