feat(styling): added app styling and database on-load render, next is dates and styles (idx)

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,7 +12,7 @@
 	--color-vh-primary: #00c8c8;
 	--color-vh-secondary: #ff6b6b;
 	--color-vh-tertiary: #9b59b6;
-	--color-light-gray: #f2f2f2;
+	--color-white: #f2f2f2;
 	--color-pink: #ff69b4;
 	--color-purple: #8e44ad;
 	--color-dark-blue: #3498db;
