--- a/frontend/components/styles/quote.css
+++ b/frontend/components/styles/quote.css
@@ -12,9 +12,17 @@
     display: 'flex';
     flex-direction: column;
     margin: '0 auto';
-    border-radius: 1.5rem;
-    border-style: outset;
-    border-color:rgb(from color r g b)
+    border-radius: 16px;
+}
+
+.quote:hover {
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    font-size: 16px;
+    font-family: inherit;
+    background-color: #f8f8f8;
+    transition: border-color 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
+    box-shadow: 0 0 8px rgba(102, 175, 233, 0.6);
 }
 
 .message-scroll {
