--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,11 +1,21 @@
+@font-face {
+    font-family: 'Varela';
+    src: url('../public/VarelaRound-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+  }
 
 .App { 
     min-height: 100vh;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    padding-bottom: 50px;
     color: #fff;
     background-image: linear-gradient(to bottom, var(--color-vh-primary), var(--color-vh-tertiary));
-    background-size: cover;
     background-repeat: no-repeat;
     text-align: center;
+    font-family: 'Varela', normal;
 }
 
 .hero {
@@ -24,6 +34,32 @@
 
 .label { 
     padding-right: 8px;
+    font-size: 16px;
     font-weight: bold;
     padding-left: 8px;
 }
+
+.input-message {
+    padding: 8px 12px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-size: 16px;
+    font-family: inherit;
+    color: #333;
+    background-color: #f8f8f8;
+    transition: border-color 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
+  }
+  
+  .input-message:focus {
+    outline: none;
+    border-color: #66afe9;
+    box-shadow: 0 0 10px rgba(102, 175, 233, 0.6);
+  }
+  
+  .input-message::placeholder {
+    color: #999;
+    font-style: italic;
+  }
