--- a/frontend/components/ui/styles_ui/button.css
+++ b/frontend/components/ui/styles_ui/button.css
@@ -11,6 +11,7 @@
     flex-direction: column;
     margin: '0 auto';
     border-radius: 16px;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
 }
 
 .customButton:hover {
