--- a/frontend/components/styles/quote.css
+++ b/frontend/components/styles/quote.css
@@ -13,16 +13,17 @@
     flex-direction: column;
     margin: '0 auto';
     border-radius: 16px;
+    border: 0.25px solid #ccc;
 }
 
 .quote:hover {
     border: 1px solid #ccc;
     box-sizing: border-box;
-    font-size: 16px;
+    font-size: 20px;
     font-family: inherit;
     background-color: #f8f8f8;
     transition: border-color 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
-    box-shadow: 0 0 8px rgba(102, 175, 233, 0.6);
+    box-shadow: 0 0 10px rgba(102, 175, 233, 0.9);
 }
 
 .message-scroll {
